--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -891,8 +891,78 @@ $if(watermark)$
 \SetWatermarkScale{.5}
 $endif$
 
+% Custom heading styling
+
+% Colors
+\definecolor{ctpRosewater} {RGB} {242, 213, 207}	
+\definecolor{ctpFlamingo}  {RGB} {238, 190, 190}	
+\definecolor{ctpPink}      {RGB} {244, 184, 228}	
+\definecolor{ctpMauve}     {RGB} {202, 158, 230}	
+\definecolor{ctpRed}       {RGB} {231, 130, 132}	
+\definecolor{ctpMaroon}    {RGB} {234, 153, 156}	
+\definecolor{ctpPeach}     {RGB} {239, 159, 118}	
+\definecolor{ctpYellow}    {RGB} {229, 200, 144}	
+\definecolor{ctpGreen}     {RGB} {166, 209, 137}	
+\definecolor{ctpTeal}      {RGB} {129, 200, 190}	
+\definecolor{ctpSky}       {RGB} {153, 209, 219}	
+\definecolor{ctpSapphire}  {RGB} {133, 193, 220}	
+\definecolor{ctpBlue}      {RGB} {140, 170, 238}	
+\definecolor{ctpLavender}  {RGB} {186, 187, 241}	
+\definecolor{ctpText}      {RGB} {198, 208, 245}	
+\definecolor{ctpSubtext1}  {RGB} {181, 191, 226} 
+\definecolor{ctpSubtext0}  {RGB} {165, 173, 206}	
+\definecolor{ctpOverlay2}  {RGB} {148, 156, 187}	
+\definecolor{ctpOverlay1}  {RGB} {131, 139, 167}	
+\definecolor{ctpOverlay0}  {RGB} {115, 121, 148}	
+\definecolor{ctpSurface2}  {RGB} {98, 104, 128}	
+\definecolor{ctpSurface1}  {RGB} {81, 87, 109}	
+\definecolor{ctpSurface0}  {RGB} {65, 69, 89}	
+\definecolor{ctpBase}      {RGB} {48, 52, 70}	
+\definecolor{ctpMantle}    {RGB} {41, 44, 60}	
+\definecolor{ctpCrust}     {RGB} {35, 38, 52}	
+% Section styling
+\addtokomafont{section}{\color{ctpRed}\Large}
+\addtokomafont{subsection}{\color{ctpBlue}\large}
+\addtokomafont{subsubsection}{\color{ctpPeach}\normalsize}
+
+% Spacing
+
+\RedeclareSectionCommand[
+  beforeskip=50pt,
+  afterskip=-50pt
+]{section}
+
+\RedeclareSectionCommand[
+  beforeskip=0pt,
+  afterskip=0.5ex
+]{subsection}
+
+\RedeclareSectionCommand[
+  beforeskip=0pt,
+  afterskip=0.5ex
+]{subsubsection}
+
+% If you want to add numbers
+% \RedeclareSectionCommand[numbers=true]{section}
+% \RedeclareSectionCommand[numbers=true]{subsection}
+% \RedeclareSectionCommand[numbers=true]{subsubsection}
+
+% If you want to modify the number format
+% \renewcommand*{\sectionformat}{\thesection.\enskip}
+% \renewcommand*{\subsectionformat}{\thesubsection.\enskip}
+% \renewcommand*{\subsubsectionformat}{\thesubsubsection.\enskip}
+
+%%
+%% end added
+%%
+
 \begin{document}
 
+%%
+%% begin titlepage
+%%
+$if(beamer)$
+$else$
 $if(titlepage)$
 \begin{titlepage}
 $if(titlepage-background)$
