--- a/Untitled-1.sty
+++ b/Untitled-1.sty
@@ -1,6 +1,6 @@
 %%
-% Copyright (c) 2017 - 2025, Pascal Wagler;
-% Copyright (c) 2014 - 2025, John MacFarlane
+% Copyright (c) 2017 - 2023, Pascal Wagler;
+% Copyright (c) 2014 - 2023, John MacFarlane
 %
 % All rights reserved.
 %
@@ -51,13 +51,8 @@
 $if(CJKmainfont)$
 \PassOptionsToPackage{space}{xeCJK}
 $endif$
+%
 \documentclass[
-$for(babel-otherlangs)$
-  $babel-otherlangs$,
-$endfor$
-$if(babel-lang)$
-  $babel-lang$,
-$endif$
 $if(fontsize)$
   $fontsize$,
 $endif$
@@ -66,47 +61,91 @@ $if(papersize)$
 $else$
   paper=a4,
 $endif$
+$if(beamer)$
+  ignorenonframetext,
+$if(handout)$
+  handout,
+$endif$
+$if(aspectratio)$
+  aspectratio=$aspectratio$,
+$endif$
+
+% update for pandoc > 3.2.1
+% https://github.com/jgm/pandoc-templates/commit/6c0e7b0a4f990debcd38b5c3bd8599193ae8f5a6#diff-f218051b4ca8f740a9f585a149101d4a3025037c568b391b5216edf7b14cfadc
+$if(babel-lang)$
+  $babel-lang$,
+$endif$
+
+$endif$
 $for(classoption)$
   $classoption$$sep$,
 $endfor$
   ,captions=tableheading
-]{$if(book)$scrbook$else$scrartcl$endif$}
+]{$if(beamer)$$documentclass$$else$$if(book)$scrbook$else$scrartcl$endif$$endif$}
+$if(beamer)$
+$if(background-image)$
+\usebackgroundtemplate{%
+  \includegraphics[width=\paperwidth]{$background-image$}%
+}
+% In beamer background-image does not work well when other images are used, so this is the workaround
+\pgfdeclareimage[width=\paperwidth,height=\paperheight]{background}{$background-image$}
+\usebackgroundtemplate{\pgfuseimage{background}}
+$endif$
+\usepackage{pgfpages}
+\setbeamertemplate{caption}[numbered]
+\setbeamertemplate{caption label separator}{: }
+\setbeamercolor{caption name}{fg=normal text.fg}
+\beamertemplatenavigationsymbols$if(navigation)$$navigation$$else$empty$endif$
+$for(beameroption)$
+\setbeameroption{$beameroption$}
+$endfor$
+% Prevent slide breaks in the middle of a paragraph
+\widowpenalties 1 10000
+\raggedbottom
+$if(section-titles)$
+\setbeamertemplate{part page}{
+  \centering
+  \begin{beamercolorbox}[sep=16pt,center]{part title}
+    \usebeamerfont{part title}\insertpart\par
+  \end{beamercolorbox}
+}
+\setbeamertemplate{section page}{
+  \centering
+  \begin{beamercolorbox}[sep=12pt,center]{part title}
+    \usebeamerfont{section title}\insertsection\par
+  \end{beamercolorbox}
+}
+\setbeamertemplate{subsection page}{
+  \centering
+  \begin{beamercolorbox}[sep=8pt,center]{part title}
+    \usebeamerfont{subsection title}\insertsubsection\par
+  \end{beamercolorbox}
+}
+\AtBeginPart{
+  \frame{\partpage}
+}
+\AtBeginSection{
+  \ifbibliography
+  \else
+    \frame{\sectionpage}
+  \fi
+}
+\AtBeginSubsection{
+  \frame{\subsectionpage}
+}
+$endif$
+$endif$
 $if(beamerarticle)$
 \usepackage{beamerarticle} % needs to be loaded first
 $endif$
-\usepackage{xcolor}
-$if(footnotes-pretty)$
-% load footmisc in order to customize footnotes (footmisc has to be loaded before hyperref, cf. https://tex.stackexchange.com/a/169124/144087)
-\usepackage[hang,flushmargin,bottom,multiple]{footmisc}
-\setlength{\footnotemargin}{0.8em} % set space between footnote nr and text
-\setlength{\footnotesep}{\baselineskip} % set space between multiple footnotes
-\setlength{\skip\footins}{0.3cm} % set space between page content and footnote
-\setlength{\footskip}{0.9cm} % set space between footnote and page bottom
-$endif$
-$if(geometry)$
-\usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
-$else$
-\usepackage[margin=2.5cm,includehead=true,includefoot=true,centering,$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
-$endif$
 \usepackage{amsmath,amssymb}
-
-$if(titlepage-logo)$
-\usepackage[export]{adjustbox}
-\usepackage{graphicx}
-$endif$
-
-% add backlinks to footnote references, cf. https://tex.stackexchange.com/questions/302266/make-footnote-clickable-both-ways
-$if(footnotes-disable-backlinks)$
+$if(linestretch)$
+\usepackage{setspace}
 $else$
-\usepackage{footnotebackref}
-$endif$
-%
-% section numbering
-%
-$if(numbersections)$
-\setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
-$else$
-\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+% Use setspace anyway because we change the default line spacing.
+% The spacing is changed early to affect the titlepage and the TOC.
+\usepackage{setspace}
+\setstretch{1.2}
 $endif$
 \usepackage{iftex}
 \ifPDFTeX
@@ -123,52 +162,49 @@ $if(mathspec)$
 $else$
   \usepackage{unicode-math} % this also loads fontspec
 $endif$
-  \defaultfontfeatures{Scale=MatchLowercase}% must come before Beamer theme
+  \defaultfontfeatures{Scale=MatchLowercase}$-- must come before Beamer theme
   \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
 $if(fontfamily)$
 $else$
-% Set default font before Beamer theme so the theme can override it
+$-- Set default font before Beamer theme so the theme can override it
 \usepackage{lmodern}
 $endif$
-% User font settings (must come after default font and Beamer theme)
+$-- Set Beamer theme before user font settings so they can override theme
+$if(beamer)$
+$if(theme)$
+\usetheme[$for(themeoptions)$$themeoptions$$sep$,$endfor$]{$theme$}
+$endif$
+$if(colortheme)$
+\usecolortheme{$colortheme$}
+$endif$
+$if(fonttheme)$
+\usefonttheme{$fonttheme$}
+$endif$
+$if(mainfont)$
+\usefonttheme{serif} % use mainfont rather than sansfont for slide text
+$endif$
+$if(innertheme)$
+\useinnertheme{$innertheme$}
+$endif$
+$if(outertheme)$
+\useoutertheme{$outertheme$}
+$endif$
+$endif$
+$-- User font settings (must come after default font and Beamer theme)
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $endif$
 \ifPDFTeX\else
   % xetex/luatex font selection
 $if(mainfont)$
-$if(mainfontfallback)$
-  \ifLuaTeX
-    \usepackage{luaotfload}
-    \directlua{luaotfload.add_fallback("mainfontfallback",{
-      $for(mainfontfallback)$"$mainfontfallback$"$sep$,$endfor$
-    })}
-  \fi
-$endif$
-  \setmainfont[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$$if(mainfontfallback)$,RawFeature={fallback=mainfontfallback}$endif$]{$mainfont$}
+  \setmainfont[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$]{$mainfont$}
 $endif$
 $if(sansfont)$
-$if(sansfontfallback)$
-  \ifLuaTeX
-    \usepackage{luaotfload}
-    \directlua{luaotfload.add_fallback("sansfontfallback",{
-      $for(sansfontfallback)$"$sansfontfallback$"$sep$,$endfor$
-    })}
-  \fi
-$endif$
-  \setsansfont[$for(sansfontoptions)$$sansfontoptions$$sep$,$endfor$$if(sansfontfallback)$,RawFeature={fallback=sansfontfallback}$endif$]{$sansfont$}
+  \setsansfont[$for(sansfontoptions)$$sansfontoptions$$sep$,$endfor$]{$sansfont$}
 $endif$
 $if(monofont)$
-$if(monofontfallback)$
-  \ifLuaTeX
-    \usepackage{luaotfload}
-    \directlua{luaotfload.add_fallback("monofontfallback",{
-      $for(monofontfallback)$"$monofontfallback$"$sep$,$endfor$
-    })}
-  \fi
-$endif$
-  \setmonofont[$for(monofontoptions)$$monofontoptions$$sep$,$endfor$$if(monofontfallback)$,RawFeature={fallback=monofontfallback}$endif$]{$monofont$}
+  \setmonofont[$for(monofontoptions)$$monofontoptions$$sep$,$endfor$]{$monofont$}
 $endif$
 $for(fontfamilies)$
   \newfontfamily{$fontfamilies.name$}[$for(fontfamilies.options)$$fontfamilies.options$$sep$,$endfor$]{$fontfamilies.font$}
@@ -188,12 +224,12 @@ $if(CJKmainfont)$
   \ifXeTeX
     \usepackage{xeCJK}
     \setCJKmainfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
-$if(CJKsansfont)$
-    \setCJKsansfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKsansfont$}
-$endif$
-$if(CJKmonofont)$
-    \setCJKmonofont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmonofont$}
-$endif$
+    $if(CJKsansfont)$
+      \setCJKsansfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKsansfont$}
+    $endif$
+    $if(CJKmonofont)$
+      \setCJKmonofont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmonofont$}
+    $endif$
   \fi
 $endif$
 $if(luatexjapresetoptions)$
@@ -233,18 +269,6 @@ $endif$
   \usepackage[$for(microtypeoptions)$$microtypeoptions$$sep$,$endfor$]{microtype}
   \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-
-$if(linestretch)$
-\usepackage{setspace}
-$else$
-% Use setspace anyway because we change the default line spacing.
-% The spacing is changed early to affect the titlepage and the TOC.
-\usepackage{setspace}
-\setstretch{1.2}
-$endif$
-%
-% paragraph formatting
-%
 $if(indent)$
 $else$
 \makeatletter
@@ -258,41 +282,41 @@ $else$
   \KOMAoptions{parskip=half}}
 \makeatother
 $endif$
-$if(beamer)$
-$else$
-$if(block-headings)$
-% Make \paragraph and \subparagraph free-standing
-\makeatletter
-\ifx\paragraph\undefined\else
-  \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}{
-    \@ifstar
-      \xxxParagraphStar
-      \xxxParagraphNoStar
-  }
-  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
-  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-  \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}{
-    \@ifstar
-      \xxxSubParagraphStar
-      \xxxSubParagraphNoStar
-  }
-  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
-  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
-\makeatother
-$endif$
-$endif$
-%
-% verbatim in notes
-%
 $if(verbatim-in-note)$
 \usepackage{fancyvrb}
 $endif$
-% highlighting
+\usepackage{xcolor}
+\definecolor{default-linkcolor}{HTML}{A50000}
+\definecolor{default-filecolor}{HTML}{A50000}
+\definecolor{default-citecolor}{HTML}{4077C0}
+\definecolor{default-urlcolor}{HTML}{4077C0}
+$if(footnotes-pretty)$
+% load footmisc in order to customize footnotes (footmisc has to be loaded before hyperref, cf. https://tex.stackexchange.com/a/169124/144087)
+\usepackage[hang,flushmargin,bottom,multiple]{footmisc}
+\setlength{\footnotemargin}{0.8em} % set space between footnote nr and text
+\setlength{\footnotesep}{\baselineskip} % set space between multiple footnotes
+\setlength{\skip\footins}{0.3cm} % set space between page content and footnote
+\setlength{\footskip}{0.9cm} % set space between footnote and page bottom
+$endif$
+$if(geometry)$
+$if(beamer)$
+\geometry{$for(geometry)$$geometry$$sep$,$endfor$}
+$else$
+\usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
+$endif$
+$else$
+$if(beamer)$
+$else$
+\usepackage[margin=2.5cm,includehead=true,includefoot=true,centering,$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
+$endif$
+$endif$
+$if(titlepage-logo)$
+\usepackage[export]{adjustbox}
+\usepackage{graphicx}
+$endif$
+$if(beamer)$
+\newif\ifbibliography
+$endif$
 $if(listings)$
 \usepackage{listings}
 \newcommand{\passthrough}[1]{#1}
@@ -321,9 +345,6 @@ $highlighting-macros$
 \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,fontsize=$if(code-block-font-size)$$code-block-font-size$$else$\small$endif$,commandchars=\\\{\}}
 
 $endif$
-%
-% tables
-%
 $if(tables)$
 \usepackage{longtable,booktabs,array}
 $if(multirow)$
@@ -347,50 +368,36 @@ $else$
 \makesavenoteenv{longtable}
 $endif$
 $endif$
-%
-% graphics
-%
+% add backlinks to footnote references, cf. https://tex.stackexchange.com/questions/302266/make-footnote-clickable-both-ways
+$if(footnotes-disable-backlinks)$
+$else$
+\usepackage{footnotebackref}
+$endif$
 $if(graphics)$
 \usepackage{graphicx}
 \makeatletter
-\newsavebox\pandoc@box
-\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
-  \sbox\pandoc@box{#1}%
-  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
-  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
-  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
-  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
-  \else\usebox{\pandoc@box}%
-  \fi%
-}
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 % Set default figure placement to htbp
-% Make use of float-package and set default placement for figures to H.
-% The option H means 'PUT IT HERE' (as  opposed to the standard h option which means 'You may put it here if you like').
-\usepackage{float}
-\floatplacement{figure}{$if(float-placement-figure)$$float-placement-figure$$else$H$endif$}
+\makeatletter
+\def\fps@figure{htbp}
 \makeatother
 $endif$
 $if(svg)$
 \usepackage{svg}
 $endif$
-%
-% strikeout/underline
-%
 $if(strikeout)$
+$-- also used for underline
 \ifLuaTeX
   \usepackage{luacolor}
   \usepackage[soul]{lua-ul}
 \else
-  \usepackage{soul}
-$if(beamer)$
-  \makeatletter
-  \let\HL\hl
-  \renewcommand\hl{% fix for beamer highlighting
-    \let\set@color\beamerorig@set@color
-    \let\reset@color\beamerorig@reset@color
-    \HL}
-  \makeatother
-$endif$
+\usepackage{soul}
 $if(CJKmainfont)$
   \ifXeTeX
     % soul's \st doesn't work for CJK:
@@ -400,9 +407,34 @@ $if(CJKmainfont)$
 $endif$
 \fi
 $endif$
-%
-% CSL citations
-%
+\setlength{\emergencystretch}{3em} % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+$if(numbersections)$
+\setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
+$else$
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+$endif$
+$if(subfigure)$
+\usepackage{subcaption}
+$endif$
+$if(beamer)$
+$else$
+$if(block-headings)$
+% Make \paragraph and \subparagraph free-standing
+\ifx\paragraph\undefined\else
+  \let\oldparagraph\paragraph
+  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+  \let\oldsubparagraph\subparagraph
+  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
+$endif$
+$endif$
+$if(pagestyle)$
+\pagestyle{$pagestyle$}
+$endif$
 $if(csl-refs)$
 % definitions for citeproc citations
 \NewDocumentCommand\citeproctext{}{}
@@ -420,72 +452,55 @@ $if(csl-refs)$
 \newlength{\csllabelwidth}
 \setlength{\csllabelwidth}{3em}
 \newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
- {\begin{list}{}{%
-  \setlength{\itemindent}{0pt}
-  \setlength{\leftmargin}{0pt}
-  \setlength{\parsep}{0pt}
-  % turn on hanging indent if param 1 is 1
-  \ifodd #1
-   \setlength{\leftmargin}{\cslhangindent}
-   \setlength{\itemindent}{-1\cslhangindent}
-  \fi
-  % set entry spacing
-  \setlength{\itemsep}{#2\baselineskip}}}
- {\end{list}}
+  {\begin{list}{}{%
+   \setlength{\itemindent}{0pt}
+   \setlength{\leftmargin}{0pt}
+   \setlength{\parsep}{0pt}
+   % turn on hanging indent if param 1 is 1
+   \ifodd #1
+    \setlength{\leftmargin}{\cslhangindent}
+    \setlength{\itemindent}{-1\cslhangindent}
+   \fi
+   % set entry spacing
+   \setlength{\itemsep}{#2\baselineskip}}}
+  {\end{list}}
 \usepackage{calc}
 \newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
 \newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
 \newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 $endif$
-%
-% Babel language support
-%
 $if(lang)$
 \ifLuaTeX
-\usepackage[bidi=basic,shorthands=off,$for(babeloptions)$,$babeloptions$$endfor$]{babel}
+\usepackage[bidi=basic]{babel}
 \else
-\usepackage[bidi=default,shorthands=off,$for(babeloptions)$,$babeloptions$$endfor$]{babel}
+\usepackage[bidi=default]{babel}
 \fi
 $if(babel-lang)$
+\babelprovide[main,import]{$babel-lang$}
 $if(mainfont)$
 \ifPDFTeX
 \else
-\babelfont{rm}[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$$if(mainfontfallback)$,RawFeature={fallback=mainfontfallback}$endif$]{$mainfont$}
+\babelfont{rm}[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$]{$mainfont$}
 \fi
 $endif$
 $endif$
+$for(babel-otherlangs)$
+\babelprovide[import]{$babel-otherlangs$}
+$endfor$
 $for(babelfonts/pairs)$
 \babelfont[$babelfonts.key$]{rm}{$babelfonts.value$}
 $endfor$
+% get rid of language-specific shorthands (see #6817):
+\let\LanguageShortHands\languageshorthands
+\def\languageshorthands#1{}
+$endif$
+$for(header-includes)$
+$header-includes$
+$endfor$
 \ifLuaTeX
-  \usepackage{selnolig} % disable illegal ligatures
+  \usepackage{selnolig}  % disable illegal ligatures
 \fi
-$endif$
-%
-% pagestyle
-%
-$if(pagestyle)$
-\pagestyle{$pagestyle$}
-$endif$
-%
-% prevent overfull lines
-%
-\setlength{\emergencystretch}{3em} % prevent overfull lines
-%
-% tight lists
-%
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-%
-% subfigure support
-%
-$if(subfigure)$
-\usepackage{subcaption}
-$endif$
-%
-% text direction support for pdftex
-%
 $if(dir)$
 \ifPDFTeX
   \TeXXeTstate=1
@@ -495,9 +510,6 @@ $if(dir)$
   \newenvironment{LTR}{\beginL}{\endL}
 \fi
 $endif$
-%
-% bibliography support support for natbib and biblatex
-%
 $if(natbib)$
 \usepackage[$natbiboptions$]{natbib}
 \bibliographystyle{$if(biblio-style)$$biblio-style$$else$plainnat$endif$}
@@ -508,16 +520,13 @@ $for(bibliography)$
 \addbibresource{$bibliography$}
 $endfor$
 $endif$
-%
-% csquotes
-%
-$if(csquotes)$
-\usepackage[$for(csquotesoptions)$$csquotesoptions$$sep$,$endfor$]{csquotes}
+$if(nocite-ids)$
+\nocite{$for(nocite-ids)$$it$$sep$, $endfor$}
 $endif$
-$for(header-includes)$
-$header-includes$
-$endfor$
-\usepackage{bookmark}
+$if(csquotes)$
+\usepackage{csquotes}
+$endif$
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{$if(urlstyle)$$urlstyle$$else$same$endif$}
 $if(links-as-notes)$
@@ -527,11 +536,6 @@ $endif$
 $if(verbatim-in-note)$
 \VerbatimFootnotes % allow verbatim text in footnotes
 $endif$
-\definecolor{default-linkcolor}{HTML}{A50000}
-\definecolor{default-filecolor}{HTML}{A50000}
-\definecolor{default-citecolor}{HTML}{4077C0}
-\definecolor{default-urlcolor}{HTML}{4077C0}
-
 \hypersetup{
 $if(title-meta)$
   pdftitle={$title-meta$},
@@ -548,6 +552,12 @@ $endif$
 $if(keywords)$
   pdfkeywords={$for(keywords)$$keywords$$sep$, $endfor$},
 $endif$
+$if(version)$
+  pdfcreator={Version $version$},
+$endif$
+$if(copyright)$
+  pdfcopyright={$copyright$},
+$endif$
 $if(colorlinks)$
   colorlinks=true,
   linkcolor={$if(linkcolor)$$linkcolor$$else$default-linkcolor$endif$},
@@ -555,28 +565,44 @@ $if(colorlinks)$
   citecolor={$if(citecolor)$$citecolor$$else$default-citecolor$endif$},
   urlcolor={$if(urlcolor)$$urlcolor$$else$default-urlcolor$endif$},
 $else$
-$if(boxlinks)$
-$else$
   hidelinks,
-$endif$
 $endif$
   breaklinks=true,
   pdfcreator={LaTeX via pandoc with the Eisvogel template}}
-
 $if(title)$
 \title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
 $endif$
 $if(subtitle)$
+$if(beamer)$
+$else$
 \usepackage{etoolbox}
 \makeatletter
 \providecommand{\subtitle}[1]{% add subtitle to \maketitle
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
+$endif$
 \subtitle{$subtitle$}
 $endif$
 \author{$for(author)$$author$$sep$ \and $endfor$}
 \date{$date$}
+$if(beamer)$
+$if(institute)$
+\institute{$for(institute)$$institute$$sep$ \and $endfor$}
+$endif$
+$if(titlegraphic)$
+\titlegraphic{\includegraphics{$titlegraphic$}}
+$endif$
+$if(logo)$
+\logo{\includegraphics{$logo$}}
+$endif$
+$endif$
+
+
+
+%%
+%% added
+%%
 
 $if(page-background)$
 \usepackage[pages=all]{background}
@@ -612,8 +638,11 @@ $endif$
 % captions
 %
 \definecolor{caption-color}{HTML}{777777}
+$if(beamer)$
+$else$
 \usepackage[font={stretch=1.2}, textfont={color=caption-color}, position=top, skip=4mm, labelfont=bf, singlelinecheck=false, justification=$if(caption-justification)$$caption-justification$$else$raggedright$endif$]{caption}
 \setcapindent{0em}
+$endif$
 
 %
 % blockquote
@@ -669,7 +698,11 @@ $endif$
 % heading color
 %
 \definecolor{heading-color}{RGB}{40,40,40}
+
+$if(beamer)$
+$else$
 \addtokomafont{section}{\color{heading-color}}
+$endif$
 % When using the classes report, scrreprt, book,
 % scrbook or memoir, uncomment the following line.
 %\addtokomafont{chapter}{\color{heading-color}}
@@ -677,23 +710,44 @@ $endif$
 %
 % variables for title, author and date
 %
+$if(beamer)$
+$else$
 \usepackage{titling}
 \title{$title$}
 \author{$for(author)$$author$$sep$, $endfor$}
 \date{$date$}
+$endif$
 
 %
 % tables
 %
 $if(tables)$
 
-\definecolor{table-row-color}{HTML}{F5F5F5}
-\definecolor{table-rule-color}{HTML}{999999}
+% Required packages
+\usepackage{colortbl}
+\usepackage{array}
+\usepackage{booktabs}
+\usepackage{tabularx}
+\usepackage{makecell}
+
+% Define colors for tables
+\definecolor{table-row-color}{HTML}{F9F9F9}    % pale gray color
+\definecolor{table-rule-color}{HTML}{232634}   % Crust color
+\definecolor{header-bg}{HTML}{E1E9F0}          % Header background color
+\definecolor{header-fg}{HTML}{C6D0F5}          % Header text color
 
 %\arrayrulecolor{black!40}
 \arrayrulecolor{table-rule-color}     % color of \toprule, \midrule, \bottomrule
 \setlength\heavyrulewidth{0.3ex}      % thickness of \toprule, \bottomrule
 \renewcommand{\arraystretch}{1.3}     % spacing (padding)
+
+% Header row styling
+\let\oldthead\thead
+\renewcommand{\thead}{%
+  \rowcolor{header-bg}%
+  \bfseries%
+  \color{header-fg}%
+}
 
 $if(table-use-row-colors)$
 % Unfortunately the colored cells extend beyond the edge of the
@@ -704,10 +758,14 @@ $if(table-use-row-colors)$
 %
 % https://en.wikibooks.org/wiki/LaTeX/Tables#.40-expressions
 \usepackage{etoolbox}
-\AtBeginEnvironment{longtable}{\rowcolors{2}{}{table-row-color!100}}
-\preto{\toprule}{\hiderowcolors}{}{}
-\appto{\endhead}{\showrowcolors}{}{}
-\appto{\endfirsthead}{\showrowcolors}{}{}
+\AtBeginEnvironment{longtable}{
+  \rowcolors{2}{}{table-row-color!100}
+  }
+  \preto{\toprule}{\hiderowcolors}{}{}
+  \appto{\endhead}{\showrowcolors}{}{}
+  \appto{\endfirsthead}{\showrowcolors}{}{}
+  \usepackage{colortbl}
+
 $endif$
 $endif$
 
@@ -848,17 +906,19 @@ $endif$
 %
 % header and footer
 %
+$if(beamer)$
+$else$
 $if(disable-header-and-footer)$
 $else$
 \usepackage[headsepline,footsepline]{scrlayer-scrpage}
 
 \newpairofpagestyles{eisvogel-header-footer}{
   \clearpairofpagestyles
-  \ihead*{$if(header-left)$$header-left$$else$$title$$endif$}
-  \chead*{$if(header-center)$$header-center$$else$$endif$}
+  \ihead*{$if(header-left)$$header-left$$else$$ID$$endif$}
+  \chead*{$if(header-center)$$header-center$$else$$title$$endif$}
   \ohead*{$if(header-right)$$header-right$$else$$date$$endif$}
   \ifoot*{$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$}
-  \cfoot*{$if(footer-center)$$footer-center$$else$$endif$}
+  \cfoot*{$if(footer-center)$$footer-center$$else$$for(email)$$email$$sep$, $endfor$$endif$}
   \ofoot*{$if(footer-right)$$footer-right$$else$\thepage$endif$}
   \addtokomafont{pageheadfoot}{\upshape}
 }
@@ -881,18 +941,12 @@ contents={%
 }
 $endif$
 $endif$
-
-%
-% Define watermark
-%
-$if(watermark)$
-\usepackage{draftwatermark}
-\SetWatermarkText{$watermark$}
-\SetWatermarkScale{.5}
 $endif$
 
+% Modified Nathaniel Cole 13-05-25
 % Custom heading styling
 
+% \usepackage{titlesec}
 % Colors
 \definecolor{ctpRosewater} {RGB} {242, 213, 207}	
 \definecolor{ctpFlamingo}  {RGB} {238, 190, 190}	
@@ -920,6 +974,45 @@ $endif$
 \definecolor{ctpBase}      {RGB} {48, 52, 70}	
 \definecolor{ctpMantle}    {RGB} {41, 44, 60}	
 \definecolor{ctpCrust}     {RGB} {35, 38, 52}	
+
+% Header styling
+% \titleformat{\section}
+%   {\newpage\Large\bfseries\color{ctpRed}}
+%   {\thesection.}
+%   {1em}
+%   {}
+%   % [\vspace{0.5em}\hrule\vspace{1em}] % horizontal line below header
+
+% \titleformat{\subsection}
+%   {\large\bfseries\color{ctpPeach}}
+%   {\thesubsection.}
+%   {1em}
+%   {}
+%   % [\vspace{0.3em}]
+
+% \titleformat{\subsubsection}
+%   {\normalsize\bfseries\color{ctpYellow}}
+%   {\thesubsubsection.}
+%   {1em}
+%   {}
+%   % [\vspace{0.2em}]
+
+% % Header spacing
+% \titlespacing*{\section}
+%   {0pt}  % left
+%   {1ex plus 1ex minus .2ex}  % before
+%   {0ex plus 0ex}  % after
+
+% \titlespacing*{\subsection}
+%   {0pt}
+%   {1ex plus 1ex minus .2ex}
+%   {0ex plus 0ex}
+
+% \titlespacing*{\subsubsection}
+%   {0pt}
+%   {1ex plus 1ex minus .2ex}
+%   {0ex plus 0ex}
+
 % Section styling
 \addtokomafont{section}{\color{ctpRed}\Large}
 \addtokomafont{subsection}{\color{ctpBlue}\large}
@@ -961,6 +1054,8 @@ $endif$
 %%
 %% begin titlepage
 %%
+$if(beamer)$
+$else$
 $if(titlepage)$
 \begin{titlepage}
 $if(titlepage-background)$
@@ -978,9 +1073,11 @@ $endif$
 \newcommand{\colorRule}[3][black]{\textcolor[HTML]{#1}{\rule{#2}{#3}}}
 \begin{flushleft}
 \noindent
-\\[-1em]
-\color[HTML]{$if(titlepage-text-color)$$titlepage-text-color$$else$5F5F5F$endif$}
+\\[1em]
+\color[HTML]{$if(titlepage-text-color)$$titlepage-text-color$$else$4d6167$endif$}
+$if(titlepage-rule)$
 \makebox[0pt][l]{\colorRule[$if(titlepage-rule-color)$$titlepage-rule-color$$else$435488$endif$]{1.3\textwidth}{$if(titlepage-rule-height)$$titlepage-rule-height$$else$4$endif$pt}}
+$endif$
 \par
 \noindent
 
@@ -989,15 +1086,19 @@ $if(titlepage-background)$
 {
   \setstretch{2}
   \vfill
-  \vskip -8em
+  \vskip -15em
   \noindent {\huge \textbf{\textsf{$title$}}}
   $if(subtitle)$
   \vskip 1em
   {\Large \textsf{$subtitle$}}
   $endif$
-  \vskip 2em
-  \noindent {\Large \textsf{$for(author)$$author$$sep$, $endfor$} \vskip 0.6em \textsf{$date$}}
+  \vskip -0.5em
+  \noindent {\Large \textsf{$for(author)$$author$$sep$, $endfor$}}
+  $if(titlepage-header)$
+  \vskip -0.5em
+  \noindent {\normalsize \texttt{$titlepage-header$}}
   \vfill
+  $endif$
 }
 $else$
 {
@@ -1008,11 +1109,34 @@ $else$
   \vskip 1em
   {\Large \textsf{$subtitle$}}
   $endif$
-  \vskip 2em
+  \vskip -0.5em
   \noindent {\Large \textsf{$for(author)$$author$$sep$, $endfor$}}
   \vfill
 }
 $endif$
+
+% start Modified NC 2025
+$if(license)$
+\vskip 1em
+\noindent {\normalsize \textsf{License: $license$}}
+$endif$
+
+$if(copyright)$
+\vskip 0.5em
+\noindent {\normalsize \textsf{$copyright$}}
+$endif$
+
+$if(version)$
+\vskip 0.5em
+\noindent {\normalsize \textsf{Version $version$}}
+$endif$
+
+$if(keywords)$
+\vskip 1em
+\noindent {\normalsize \textsf{Keywords: $for(keywords)$$keywords$$sep$, $endfor$}}
+$endif$
+
+%end
 
 $if(titlepage-logo)$
 \noindent
@@ -1028,13 +1152,34 @@ $endif$
 \restoregeometry
 \pagenumbering{arabic}
 $endif$
+$endif$
+
+%%
+%% end titlepage
+%%
+
+%start Modified NC 2025
+$if(acknowledgments)$
+\newpage
+\thispagestyle{empty}
+\section*{Acknowledgments}
+\begingroup
+$acknowledgments$
+\endgroup
+\newpage
+$endif$
+%end
 
 $if(has-frontmatter)$
 \frontmatter
 $endif$
 $if(title)$
+$if(beamer)$
+\frame{\titlepage}
 % don't generate the default title
+% $else$
 % \maketitle
+$endif$
 $if(abstract)$
 \begin{abstract}
 $abstract$
@@ -1055,6 +1200,17 @@ $if(toc)$
 $if(toc-title)$
 \renewcommand*\contentsname{$toc-title$}
 $endif$
+$if(beamer)$
+\begin{frame}[allowframebreaks]
+$if(toc-title)$
+  \frametitle{$toc-title$}
+$endif$
+  \tableofcontents[hideallsubsections]
+\end{frame}
+$if(toc-own-page)$
+\newpage
+$endif$
+$else$
 {
 $if(colorlinks)$
 \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
@@ -1065,6 +1221,7 @@ $if(toc-own-page)$
 \newpage
 $endif$
 }
+$endif$
 $endif$
 $if(lof)$
 \listoffigures
@@ -1083,9 +1240,6 @@ $body$
 $if(has-frontmatter)$
 \backmatter
 $endif$
-$if(nocite-ids)$
-\nocite{$for(nocite-ids)$$it$$sep$, $endfor$}
-$endif$
 $if(natbib)$
 $if(bibliography)$
 $if(biblio-title)$
@@ -1095,12 +1249,26 @@ $else$
 \renewcommand\refname{$biblio-title$}
 $endif$
 $endif$
-\bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
+$if(beamer)$
+\begin{frame}[allowframebreaks]{$biblio-title$}
+  \bibliographytrue
+$endif$
+  \bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
+$if(beamer)$
+\end{frame}
+$endif$
 
 $endif$
 $endif$
 $if(biblatex)$
+$if(beamer)$
+\begin{frame}[allowframebreaks]{$biblio-title$}
+  \bibliographytrue
+  \printbibliography[heading=none]
+\end{frame}
+$else$
 \printbibliography$if(biblio-title)$[title=$biblio-title$]$endif$
+$endif$
 
 $endif$
 $for(include-after)$
