--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -890,8 +890,8 @@ $else$
 
 \newpairofpagestyles{eisvogel-header-footer}{
   \clearpairofpagestyles
-  \ihead*{$if(header-left)$$header-left$$else$$title$$endif$}
-  \chead*{$if(header-center)$$header-center$$else$$endif$}
+  \ihead*{$if(header-left)$$header-left$$else$$ID$$endif$}
+  \chead*{$if(header-center)$$header-center$$else$$title$$endif$}
   \ohead*{$if(header-right)$$header-right$$else$$date$$endif$}
   \ifoot*{$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$}
   \cfoot*{$if(footer-center)$$footer-center$$else$$endif$}
