style(footer): email in footer center
- If a specific footer-center varaible isn't set, if supplied, email is auto populated to the footer center. Otherwise footer-center takes priority

--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -894,7 +894,7 @@ $else$
   \chead*{$if(header-center)$$header-center$$else$$title$$endif$}
   \ohead*{$if(header-right)$$header-right$$else$$date$$endif$}
   \ifoot*{$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$}
-  \cfoot*{$if(footer-center)$$footer-center$$else$$endif$}
+  \cfoot*{$if(footer-center)$$footer-center$$else$$for(email)$$email$$sep$, $endfor$$endif$}
   \ofoot*{$if(footer-right)$$footer-right$$else$\thepage$endif$}
   \addtokomafont{pageheadfoot}{\upshape}
 }
