--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -959,9 +959,9 @@ $endif$
 \definecolor{ctpMantle}    {RGB} {41, 44, 60}	
 \definecolor{ctpCrust}     {RGB} {35, 38, 52}	
 % Section styling
-\addtokomafont{section}{\color{ctpRed}\Large}
-\addtokomafont{subsection}{\color{ctpBlue}\large}
-\addtokomafont{subsubsection}{\color{ctpPeach}\normalsize}
+\addtokomafont{section}{\color{ctpRed}\LARGE}
+\addtokomafont{subsection}{\color{ctpBlue}\Large}
+\addtokomafont{subsubsection}{\color{ctpPeach}\large}
 
 % Spacing
 
