style(headings): increaded heading size

--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -959,9 +959,9 @@ $endif$
 \definecolor{ctpMantle}    {RGB} {41, 44, 60}	
 \definecolor{ctpCrust}     {RGB} {35, 38, 52}	
 % Section styling
-\addtokomafont{section}{\color{ctpRed}\LARGE}
-\addtokomafont{subsection}{\color{ctpBlue}\Large}
-\addtokomafont{subsubsection}{\color{ctpPeach}\large}
+\addtokomafont{section}{\color{ctpRed}\huge}
+\addtokomafont{subsection}{\color{ctpBlue}\huge}
+\addtokomafont{subsubsection}{\color{ctpPeach}\LARGE}
 
 % Spacing
 
